Added Sign up page

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Freeman&family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+body{
+    font-family: "Poppins", serif;
+}
+
+.paracolor{
+    color: #666666;
+}
 
 .platforms {
     display: flex;
